
  - Tracking presets:
    - ring preset: change default radius from 3mm to 1 mm; - 3 MeV Ekin, 10% sigma, uniform E distribution
    - added line preset: uniform line from -1 to 1 mm; monochromatic
    - default beam + gen: gaussian bundle, 1x1x3mm (x,y,z); 3 MeV Ekin 1 % sigma; nemit_x,y 1
    - default runfile: disabled ref output; track from 0 to 4 m, screens every 0.5 m

0.3.2, 12.09.20:
  - ASTRA plugin:
    - wrote a helptext documenting the ASTRA plugin
    - changing track preset no longer tries to load the corresponding beam
    - changed interface formatting a bit
    - added ability to write beam.ini from beam dataframe
    - added verbosity control to frontend
    - .clean() now does not mop the field file and reloads the presets
    - caught a mistake that made saved presets unusable
    - have .generate() load the generated beam
    - is pretty much done for now, aside from, eventually, loading other output files

  - Tracking presets:
    - added cross (5mm), square box (5mm), non-monochromatic (10% sigma) 3 mm 3 MeV ring
    - turned off field scaling in default runfile

  - General:
    - main script is "production-ready", for what it can do now;
    - changelog should be more structured
    - changed sscode package to solensim; having a solensim folder inside a solensim folder is not too bad, but looks better in the code.
    - expanded the readme.txt

0.3.1, 11.09.20:
  - implemented preset management in ASTRA plugin
  - finished default ASTRA plugin setups

0.3.0, 10.09.20:
  - start a changelog
  - add concept flowchart to docs
  - fix get_astra to add executable flag to the downloaded binaries
  - restructuring again, this time final - placeholder classes everywhere
  - closed #29 (wontfix, getting over my head with all the pointless "cool developer" shenanigans)
  - remove old code (I still have it, just to declutter)
  - added a placeholder .ini file for the future
  - Worked up an ASTRA plugin/interface, see associated v0.3 issues