@@ -14,6 +14,9 @@
     - default beam + gen: gaussian bundle, 1x1x3mm (x,y,z); 3 MeV Ekin 1 % sigma; nemit_x,y 1
     - default runfile: disabled ref output; track from 0 to 4 m, screens every 0.5 m
 
+  - Track module:
+    - can perform transformation from x,y to polar (and?????)
+
 0.3.2, 12.09.20:
   - ASTRA plugin:
     - wrote a helptext documenting the ASTRA plugin
